hphp/test/slow/coeffects/memo-make-inaccessible-parsing-bad.php.expectf
Fatal error: functions that can neither directly nor indirectly call a function requiring [zoned] do not need to and cannot pass arguments to __Memoize or __MemoizeLSB in %s/hphp/test/slow/coeffects/memo-make-inaccessible-parsing-bad.php on line 3
